// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should return generic message if initial comment was not found 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited task>:",
      "threadId": undefined,
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment edit 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Updated comment text",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
      "threadId": "ABCDE",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send message on comment conversion to the task 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":pushpin: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|converted comment to the task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":pushpin: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|converted comment to the task>:",
      "threadId": "ABCDE",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send message on comment resolving and reopening 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": 123456789,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved comment>:",
      "threadId": "ABCDE",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened comment>:",
      "threadId": "ABCDE",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send message on task conversion to the comment 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added task>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|converted task to the comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "NORMAL",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":writing_hand: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|converted task to the comment>:",
      "threadId": "ABCDE",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send message on task resolving and reopening 1`] = `
{
  "addedBookmarks": [
    {
      "channelId": "12345",
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "archivedChannels": [],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channelId": "12345",
      "force": true,
      "users": [
        "test.author@test.com",
        "test.reviewer1@test.com",
        "test.reviewer2@test.com",
      ],
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    [
      {
        "displayName": "Test Author",
        "emailAddress": "test.author@test.com",
        "name": "TestAuthor",
      },
      {
        "displayName": "Test Reviewer 1",
        "emailAddress": "test.reviewer1@test.com",
        "name": "TestReviewer1",
      },
      {
        "displayName": "Test Reviewer 2",
        "emailAddress": "test.reviewer2@test.com",
        "name": "TestReviewer2",
      },
    ],
  ],
  "searchedChannels": [
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
    "pr-test-proj-test-repository-1",
  ],
  "searchedCommentSnapshots": [
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
    {
      "bitbucketCommentId": 1,
      "channelId": "12345",
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added task>:",
      "threadId": undefined,
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": 123456789,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":white_check_mark: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|resolved task>:",
      "threadId": "ABCDE",
    },
    {
      "blocks": [
        {
          "text": {
            "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened task>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "severity": "BLOCKER",
          "taskResolvedDate": undefined,
          "threadResolvedDate": undefined,
        },
        "eventType": "bitbucket_comment_snapshot_saved",
      },
      "replyBroadcast": true,
      "text": ":repeat: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|reopened task>:",
      "threadId": "ABCDE",
    },
  ],
}
`;
